set up for payment
