# Modules/PaymentProvider/Http/Resources/CurrencyResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace Modules\PaymentProvider\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CurrencyResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    { 
+        return [
+            'id' => $this->id,
+            'code' => $this->name,
+            'symbole' => $this->symbole,
+            'created_at' => \Carbon\Carbon::parse($this->created_at)->format('Y-m-d H:i:s'),
+        ];
+    }
+}
