# Modules/PaymentProvider/Http/Resources/PaymentProviderResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace Modules\PaymentProvider\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PaymentProviderResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    { 
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'is_active' => $this->is_active?'active':'not active',
+            'created_at' => \Carbon\Carbon::parse($this->created_at)->format('Y-m-d H:i:s'),
+        ];
+    }
+}
