# Modules/PaymentProvider/Routes/web.php
@@ -1,0 +1,7 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+Route::get('/paymentprovider', function () {
+    return view('paymentprovider.index');
+});
